--- a/tools/RegExpTest.html
+++ b/tools/RegExpTest.html
@@ -33,5 +33,14 @@
         console.log(result);
     }
 </script>
+        html
+        head
+        title CSSer, 关注Web前端技术
+        script
+        if (foo) {
+        bar();
+        } else {
+        baz();
+        }
 </body>
 </html>
